--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,16 @@
-# CUDA 11.1
-torch==1.8.1
-torchvision==0.9
-pyiqa
-mmcv-full==1.6.2
+# CUDA 12.1
+python==3.8.18
+torch==2.1.0
+torchvision==0.16.0+cu121
+pyiqa 0.1.10 
+mmcv==2.1.0 
 tqdm
 seaborn
-scikit-image
+scikit-image 0.21.0 
 adamp
+scipy
+pillow
+pandas
+opencv-python==4.12.0.88
+numpy
 
